=== 4.20.0 (2015-03-03)

* Restore the use of AUTOINCREMENT on SQLite (jeremyevans) (#965)

* Duplicate the associations hash when duplicating a model object (jeremyevans)

* Correctly apply association limit when eager loading with an eager block using default limit strategy on some databases (jeremyevans)

* Fix eager loading when using the :window_function limit strategy with an eager block and cascaded associations (jeremyevans)

* Add support for set_column_type :auto_increment=>true to add AUTO_INCREMENT to existing column on MySQL (jeremyevans) (#959)

* Add support for overridding the :instance_specific association option (jeremyevans)

* Recognize MSSQL bit type as boolean in the schema_dumper (jeremyevans)

* Skip eager loading queries if there are no matching keys (jeremyevans) (#952)

* Dataset#paged_each now returns an enumerator if not passed a block (jeremyevans)

* Use to_json :root option with string value as the JSON object key in the json_serializer plugin (jeremyevans)

* Allow create_enum in the pg_enum extension be reversible in migrations (celsworth) (#951)

* Have swift adapter respect database and application timezone settings (asppsa, jeremyevans) (#946)

* Don't have the static cache plugin attempt to validate objects (jeremyevans)

* Make freeze not validate objects if their errors are already frozen (jeremyevans)

* Only use prepared statements for associations if caching association metadata (jeremyevans)

* Set parent association when loading descendants in the rcte_tree plugin (jeremyevans)

* Add Database#transaction :before_retry option, specifying a proc to call before retrying (uhoh-itsmaciek) (#941)

=== 4.19.0 (2015-02-01)

* Make jdbc/sqlanywhere correctly set :auto_increment entry in schema hashes (jeremyevans)

* Add Model#cancel_action for canceling actions in before hooks, instead of having the hooks return false (jeremyevans)

* Support not setting @@wait_timeout on MySQL via :timeout=>nil Database option (jeremyevans)
