@@ -1,3 +1,7 @@
+=== HEAD
+
+* Make Database#transaction work in after_commit/after_rollback blocks (jeremyevans)
+
 === 4.20.0 (2015-03-03)
 
 * Restore the use of AUTOINCREMENT on SQLite (jeremyevans) (#965)
